Add swagger documentation and use gin
